deployment/mcp-atlassian/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlassian-mcp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlassian-mcp-server
  template:
    metadata:
      labels:
        app: atlassian-mcp-server
    spec:
      containers:
      - name: atlassian-mcp-server
        image: docker.io/mcp/atlassian
        imagePullPolicy: Always
        command: ["mcp-atlassian"]
        args:
          - "--transport"
          - "sse"
          - "--port"
          - "8080"
          - "--verbose"
          - "--no-jira-ssl-verify"
          - "--no-confluence-ssl-verify"
        ports:
        - containerPort: 8080
        resources:
          limits:
            # cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
